# V2I-Hub

./: Readme.md  Readme.txt  Release-Notes.txt  install.sh  install_dependencies.sh  install_plugins.sh  install_tmx.sh  run.sh
DatabaseSetup/: install_db.sh  localhost.sql
container/: service.sh
gpsd-release-3.21/: .scons-option-cache
src/CARDS/CARDS_Communication/: AMQP_Base.cpp  AMQP_Base.h  AMQP_Publisher.cpp  AMQP_Publisher.h  AMQP_Subscriber.cpp  AMQP_Subscriber.h  CMakeLists.txt
src/CARDS/IO_Libs/: CMakeLists.txt  cfg_reader.cpp  cfg_reader.h
src/CARDS/Plugin_Communication/: CMakeLists.txt  HRI_Predicted_SPaT_Plugin_Agent.cpp  HRI_Predicted_SPaT_Plugin_Agent.h  HRI_Status_Plugin_Agent.cpp  HRI_Status_Plugin_Agent.h  Location_Plugin_Agent.cpp  Location_Plugin_Agent.h  Plugin_Communication_System.cpp  Plugin_Communication_System.h  Plugin_Enum.h  RCVW_Plugin_Agent.cpp  RCVW_Plugin_Agent.h
src/CARDS/Utility/: CMakeLists.txt  RngStream.cpp  RngStream.h  util_geo_operation.cpp  util_geo_operation.h  util_include_all.h  util_string_operation.cpp  util_string_operation.h  util_time_operation.cpp  util_time_operation.h
src/tmx/: tmx.doxyfile
src/tmx-exampleapps/: CMakeLists.txt
src/tmx-exampleapps/EmptyPlugin/: CMakeLists.txt  manifest.json
src/tmx-exampleapps/EmptyPlugin/src/: EmptyPlugin.cpp
src/tmx-exampleapps/ExamplePlugin/: CMakeLists.txt  manifest.json
src/tmx-exampleapps/ExamplePlugin/src/: ExamplePlugin.cpp  SampleData.cpp  SampleData.h
src/tmx-exampleapps/ExamplePlugin/test/: ExampleTest.cpp  Main.cpp  SharedCodeTest.cpp
src/tmx/Asn_J2735/: CMakeLists.txt
src/tmx/Asn_J2735/include/asn_j2735_r63/: version.h
src/tmx/Messages/include/: ApplicationDataMessageEnumTypes.h  ApplicationMessageEnumTypes.h  DecodedBsmMessage.h  HisStateChangeMessageEnumTypes.h  LocationMessage.h  LocationMessageEnumTypes.h  Measurement.h  MessageTypes.h  RTCMMessage.h  RemoteVehicleMessage.h  SystemConfigTypes.h  SystemStatusMessageEnumTypes.h  Units.h  UnitsEnumTypes.h  VehicleBasicMessage.h  VehicleParameterEnumTypes.h  version.h
src/tmx/Messages/include/rtcm/: RTCM2.h  RTCM3.h  RTCMSC10402_3Message.hpp  RtcmDataManager.h  RtcmEncodedMessage.h  RtcmMessage.h  RtcmMessageFactory.h  RtcmTypes.h  RtcmVersion.h
src/tmx/TmxApi/: CMakeLists.txt
src/tmx/TmxApi/tmx/: version.h
src/tmx/TmxApi/tmx/j2735_messages/: BasicSafetyMessage.hpp  CommonSafetyRequestMessage.hpp  EmergencyVehicleAlertMessage.hpp  IntersectionCollisionMessage.hpp  J2735MessageFactory.hpp  MapDataMessage.hpp  PersonalSafetyMessage.hpp  ProbeDataManagementMessage.hpp  ProbeVehicleDataMessage.hpp  SpatMessage.hpp  TravelerInformationMessage.hpp
src/tmx/TmxCore/: CMakeLists.txt  tmxcore.service
src/tmx/TmxCore/src/: ivpcore.cpp  version.h
src/tmx/TmxTools/: CMakeLists.txt
src/tmx/TmxTools/scripts/: archiveLogs.sh  auditConfig.py  dumpLogs.sh  usbAutoDumpLogs.sh
src/tmx/TmxTools/src/: version.h
src/tmx/TmxUtils/: CMakeLists.txt
src/tmx/TmxUtils/src/: Base64.cpp  Base64.h  BsmConverter.cpp  BsmConverter.h  Clock.cpp  Clock.h  Conversions.cpp  Conversions.h  DigitalDevice.h  FrequencyThrottle.h  GeoDisplay.cpp  GeoDisplay.h  GeoVector.cpp  GeoVector.h  ITISPhrase.cpp  ITISPhrase.h  Intersection.cpp  Intersection.h  IntersectionList.cpp  IntersectionList.h  IntersectionParserHelper.cpp  LockFreeThread.h  Logger.cpp  Logger.h  ManualResetEvent.cpp  ManualResetEvent.h  MapSupport.cpp  MapSupport.h  ParsedMap.h  PluginClient.cpp  PluginClient.h  PluginDataMonitor.h  PluginException.h  PluginExec.cpp  PluginExec.h  PluginExtender.h  PluginKeepAlive.cpp  PluginKeepAlive.h  PluginLog.cpp  PluginLog.h  (+37 more)
src/v2i-hub/: CMakeLists.txt  FindNetSNMP.cmake
src/v2i-hub/CommandPlugin/: CMakeLists.txt  manifest.json
src/v2i-hub/CommandPlugin/src/: CommandControl.cpp  CommandPlugin.cpp  CommandPlugin.h
src/v2i-hub/CswPlugin/: CMakeLists.txt  manifest.json
src/v2i-hub/CswPlugin/src/: Conversions.cpp  Conversions.h  CswPlugin.cpp  CswPlugin.h  DsrcBuilder.cpp  DsrcBuilder.h  TimeHelper.cpp  TimeHelper.h  VehicleLocate.cpp  VehicleLocate.h  XmlCurveParser.cpp  XmlCurveParser.h
src/v2i-hub/DmsPlugin/: CMakeLists.txt  manifest.json
src/v2i-hub/DmsPlugin/src/: DmsPlugin.cpp  DmsPlugin.h  DmsTest.cpp  DmsTest.h  OLDDMSPlugin.cpp.old
src/v2i-hub/DsrcImmediateForwardPlugin/: CMakeLists.txt  manifest.json
src/v2i-hub/DsrcImmediateForwardPlugin/src/: DsrcMessageManager.cpp  DsrcMessageManagerPlugin.cpp  DsrcMessageManagerPlugin.h
src/v2i-hub/HRIPredictedSpatPlugin/: CMakeLists.txt  manifest.json
src/v2i-hub/HRIPredictedSpatPlugin/src/: HRIPredictedSpatPlugin.cpp
src/v2i-hub/HRIStatusPlugin/: CMakeLists.txt  manifest.json
src/v2i-hub/HRIStatusPlugin/src/: HRIStatusPlugin.cpp
src/v2i-hub/LocationPlugin/: CMakeLists.txt  manifest.json
src/v2i-hub/LocationPlugin/src/: GPSDWorker.cpp  GPSDWorker.h  LocationPlugin.cpp  LocationPlugin.h
src/v2i-hub/MapPlugin/: CMakeLists.txt  manifest.json
src/v2i-hub/MapPlugin/src/: ConvertToJ2735r41.cpp  ConvertToJ2735r41.h  MapPlugin.cpp  XmlMapParser.cpp  XmlMapParser.h
src/v2i-hub/MessageReceiverPlugin/: CMakeLists.txt  manifest.json
src/v2i-hub/MessageReceiverPlugin/src/: MessageReceiverPlugin.cpp  MessageReceiverPlugin.h
src/v2i-hub/ODEPlugin/: CMakeLists.txt  manifest.json
src/v2i-hub/ODEPlugin/src/: ODEPlugin.cpp  ODEPlugin.h
src/v2i-hub/RtcmPlugin/: CMakeLists.txt  manifest.json
src/v2i-hub/RtcmPlugin/src/: RtcmPlugin.cpp  RtcmPlugin.h
src/v2i-hub/SpatPlugin/: CMakeLists.txt  manifest.json
src/v2i-hub/SpatPlugin/src/: NTCIP1202.cpp  NTCIP1202.h  SpatPlugin.cpp  SpatPlugin.h  signalController.cpp  signalController.h
v2i-hub-simulator/V2IHubSimulator/: BingMapHelper.cs  MainWindow.xaml  MainWindow.xaml.cs  Simulation.cs  V2IHubSimulator.csproj
v2i-webportal/admin/: admin.html
v2i-webportal/admin/js/: tmx.initialization.js
v2i-webportal/css/: jquery-ui.css  jquery-ui.theme.css  tmx.components.css
v2i-webportal/js/: tmx.common.library.js  tmx.components.library.js  tmx.fileUpload.library.js  tmx.user.library.js
(+29 files in other folders)
